fix image overflow

--- a/static/styles.css
+++ b/static/styles.css
@@ -159,7 +159,7 @@ body {
 
 img {
   height: auto;
-  width: 40em;
+  width: 100%;
   max-width: 40em;
 }
 
